@@ -1,7 +1,6 @@
 {
     "entity":
     [
-      ["transformer", "po-transformer"],
       ["very-big-electric-pole", "po-huge-electric-pole"],
       ["hidden-electric-pole-in", "po-hidden-electric-pole-in"],
       ["hidden-electric-pole-out", "po-hidden-electric-pole-out"],
@@ -11,12 +10,10 @@
     ],
     "item":
     [
-      ["transformer", "po-transformer"],
       ["very-big-electric-pole", "po-huge-electric-pole"]
     ],
     "recipe":
     [
-      ["transformer", "po-transformer"],
       ["very-big-electric-pole", "po-huge-electric-pole"]
     ]
 
