@@ -4,10 +4,12 @@ Date: ???
   Features:
     - Added support for modded poles from Bio Industries (more can be added upon request)
   Changes:
+    - "Very big electric pole" renamed to "Huge electric pole"
     - Lots of internal name changes
+    - Transformers no longer show up in both "Consumption" and "Production" sides of electric network statistics
   Bugfixes:
     - Fixed mining a transformer returns a power switch to the player's inventory
-    - Fixed mining a "Very big electric pole" returns a "Big electric pole" to the player's inventory
+    - Fixed mining a "Huge electric pole" returns a "Big electric pole" to the player's inventory
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 8 February 2020
